Updated styling and toolbar tabs to fix scrolling issue on mobile

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -46,11 +46,6 @@ md-toolbar md-tabs-canvas a {
 
 md-toolbar md-tab-item>span{
   color: white;
-  font-weight: bold;
-}
-
-md-toolbar md-tab-item:nth-last-child(3),md-tab-item:nth-last-child(2) {
-  display: none !important;
 }
 
 /* Ribbon Countdown Styling */
